<resources>
    <string name="app_name">FreeToGame</string>
    <string name="title_general">General</string>
    <string name="title_library">Library</string>
    <string name="game_genre">Genre:</string>
    <string name="game_release">Release:</string>
    <string name="game_platform">Platform:</string>
    <string name="game_publisher">Publisher:</string>
    <string name="game_developer">Developer:</string>
    <string name="game_description">Description:</string>
    <string name="list_error">Please ty again</string>
    <string name="game_url">game_url</string>
    <string name="back_stack">Back stack</string>
    <string name="game_image">Game image</string>
    <string name="sort_spinner">Sorting spinner</string>
    <string name="platform_image">Platform image</string>
    <string name="library_icon">Library icon</string>
    <string name="library_empty">Add games to your library!</string>
    <string name="play_now">PLAY NOW</string>
</resources>