<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/dark_blue">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/arrowBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_baseline_arrow_back_ios_new_24"
                android:contentDescription="@string/back_stack"/>
            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:text="Warframe" />
            <ImageView
                android:id="@+id/libraryImageView"
                android:layout_width="40dp"
                android:layout_height="36dp"
                android:background="@drawable/footer_border"
                android:layout_marginEnd="8dp"
                android:layout_gravity="end|center_vertical"
                android:contentDescription="@string/library_icon"/>
        </androidx.appcompat.widget.Toolbar>
        <ImageView
            android:id="@+id/thumbnailImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            tools:src="@drawable/image_thumbnail"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:contentDescription="@string/game_image"/>
        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/box_url_button"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thumbnailImageView">
            <Button
                android:id="@+id/gameUrlButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="0sp"
                android:autoLink="web"
                android:background="@color/transparent"
                android:contentDescription="@string/game_url" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_now"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </FrameLayout>
        <LinearLayout
            android:id="@+id/firstLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frameLayout">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/game_genre"
                android:textSize="18sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/genreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Shooter"
                android:textSize="18sp"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/secondLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstLine">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/game_release"
                android:textSize="18sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/releaseDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2013-03-25"
                android:textSize="18sp"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/thirdLineLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/secondLine">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/game_platform"
                android:textSize="18sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/platformTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="PC (Windows)"
                android:textSize="18sp"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fourthLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thirdLineLine">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/game_publisher"
                android:textSize="18sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/publisherTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Digital Extremes"
                android:textSize="18sp"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fifthLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fourthLine">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/game_developer"
                android:textSize="18sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/developerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Digital Extremes"
                android:textSize="18sp"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/sixthLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fifthLine">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/game_description"
                android:textSize="18sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/shortDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="A cooperative free-to-play third person online action shooter set in an stunning sci-fi world"
                android:textSize="18sp"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>