<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="@color/blue">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/thumbnailImageView"
            android:layout_width="182.5dp"
            android:layout_height="103dp"
            android:background="@color/black"
            tools:src="@drawable/image_thumbnail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/game_image"/>
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            tools:text="Warframe"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintStart_toEndOf="@id/thumbnailImageView"
            app:layout_constraintEnd_toStartOf="@id/libraryImageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/shortDescriptionTextView"/>
        <TextView
            android:id="@+id/shortDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/white"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            tools:text="A cooperative free-to-play third person online action shooter set in an stunning sci-fi world"
            app:layout_constraintStart_toEndOf="@id/thumbnailImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/genreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Shooter"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/thumbnailImageView"
            app:layout_constraintTop_toBottomOf="@id/shortDescriptionTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/box_genre"/>
        <ImageView
            android:id="@+id/platformImageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/windows"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/genreTextView"
            app:layout_constraintTop_toTopOf="@id/genreTextView"
            app:layout_constraintBottom_toBottomOf="@id/genreTextView"
            android:contentDescription="@string/platform_image"/>
        <ImageView
            android:id="@+id/libraryImageView"
            android:layout_width="30dp"
            android:layout_height="27dp"
            android:layout_margin="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/footer_border"
            android:contentDescription="@string/library_icon"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>